devops/istio/istio/1-general-routing/requisite.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: test
  labels:
    istio-injection: enabled
spec: {}
status: {}
