devops/istio/istio/1-general-routing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: test-api
    version: v1
  name: test-api-v1
  namespace: test
spec:
  replicas: 1
  # IMPORTANT ===================
  selector:
    matchLabels:
      app: test-api
      version: v1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      # IMPORTANT ===================
      labels:
        app: test-api
        version: v1
    spec:
      containers:
      - image: wnyao/test-api:v1
        name: test-api
        resources: {}
status: {}
