devops/istio/istio/1-general-routing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-api
  namespace: test
  labels:
    app: test-api
    service: test-api
spec:
  # IMPORTANT ===================
  ports:
  - port: 3000
    name: http
  # IMPORTANT ===================
  selector:
    app: test-api
