devops/istio/istio/1-general-routing/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-api-gateway
  namespace: test
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-api
  namespace: test
spec:
  hosts:
  - "*"
  gateways:
  - test-api-gateway
  http:
  - route:
    - destination:
        host: test-api
